[package]
name = "ja"
version = "0.1.0"
authors = ["daite <blueskykind02@yahoo.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.2.0", features = ["full"] }
reqwest = "0.11.1"
select = "0.5.0"